[tool.poetry]
name = "causal-impact-meetup"
version = "0.1.0"
description = ""
authors = ["Julien Perichon <julien.perichon@sicara.com>"]
readme = "README.md"
packages = [{include = "causal_impact_meetup"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
