[tool.poetry]
name = "causal-impact-meetup"
version = "0.1.0"
description = ""
authors = ["Julien Perichon <julien.perichon@sicara.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tfp-causalimpact = "^0.2.0"
tensorflow-probability = {extras = ["tf"], version = "^0.24.0"}
notebook = "<7.1"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
